--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "yarn clean && vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "clean": "rimraf ./dist"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
+    "vue": "^3.2.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +23,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-svg-loader": "^0.10.0"
   },
   "eslintConfig": {
     "root": true,
